courses/430_programming-languages/assignment-5/tests/regression/error/hw4_error11.sml
val prog =
  PROGRAM
    {decls=[],func_decls=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY {lft=EXP_BOOL true,opr=BOP_AND,rht=EXP_NUM 1}}]}
  : program
;
